--- a/app/src/main/res/layout/explore.xml
+++ b/app/src/main/res/layout/explore.xml
@@ -1,128 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".login" android:background="#FFA700">
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/filter" android:id="@+id/explore_filter_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/search" android:id="@+id/explore_search_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:background="#00FFFFFF"/>
-    <TextView
-            android:text="Explore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView8"
-            android:textSize="40sp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.023"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#CBC3E3"
+    tools:context=".login">
+
     <View
-            android:layout_width="match_parent"
-            android:layout_height="88dp" android:id="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="1.0" android:background="#FFFFA1"/>
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="88dp"
+        android:background="#673AB7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="47dp"
+        android:layout_height="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
+        app:layout_constraintTop_toBottomOf="@+id/filterExploreBtn"
+        app:srcCompat="@drawable/search" />
+
+    <ImageButton
+        android:id="@+id/filterExploreBtn"
+        android:layout_width="64dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="#CBC3E3"
+        android:src="@drawable/filter"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />;
+
     <TextView
-            android:text="Fast Food"
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:text="Explore"
+        android:textColor="#000000"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="257dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:inputType="text|textAutoComplete"
+        android:text="Search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <ListView
+        android:id="@+id/exploreListView"
+        android:layout_width="387dp"
+        android:layout_height="481dp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+        app:layout_constraintVertical_bias="0.45" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:background="#673AB7"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view">
+
+        <ImageButton
+            android:id="@+id/EnavHomeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView10"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.065" app:layout_constraintVertical_bias="0.185"/>
-    <TextView
-            android:text="Grilled Food"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/homeorange" />
+
+        <ImageButton
+            android:id="@+id/EnavSocialBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView11"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.072" app:layout_constraintVertical_bias="0.515"/>
-    <ImageView
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/socialicon" />
+
+        <ImageButton
+            android:id="@+id/EnavExplorBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/halfburger" android:id="@+id/imageView10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.309" android:layout_marginLeft="60dp"
-            android:layout_marginStart="60dp"/>
-    <ImageView
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            android:clickable="false"
+            app:srcCompat="@drawable/exploreicon" />
+
+        <ImageButton
+            android:id="@+id/EnavCBookBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/halfshrimp" android:id="@+id/imageView11"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.309" android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp" app:layout_constraintStart_toEndOf="@+id/explore_chicken_button"
-            app:layout_constraintHorizontal_bias="0.0"/>
-    <ImageButton
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/cookbookicon" />
+
+        <ImageButton
+            android:id="@+id/EnavNotiBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/leftarrow" android:id="@+id/imageButton3"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintVertical_bias="0.323"
-            app:layout_constraintEnd_toStartOf="@+id/explore_chicken_button"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/rightarrow" android:id="@+id/imageButton4"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="#00FFFFFF" app:layout_constraintHorizontal_bias="0.957"
-            app:layout_constraintVertical_bias="0.323" app:layout_constraintStart_toEndOf="@+id/explore_chicken_button"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/grilled" android:id="@+id/imageView12"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.444"
-            app:layout_constraintVertical_bias="0.69"/>
-    <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/friedchicken" android:id="@+id/explore_chicken_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/view" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintVertical_bias="0.291" android:background="#00FFFFFF"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/homeorange" android:id="@+id/explore_home_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/cookbookicon" android:id="@+id/explore_cookbook_button"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.321"
-            app:layout_constraintVertical_bias="1.0" android:background="#00FFFFFF" android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/socialicon" android:id="@+id/explore_social_button"
-            android:background="#000E0C0C"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.678" app:layout_constraintVertical_bias="1.0"
-            android:layout_marginRight="6dp" android:layout_marginEnd="6dp"/>
-    <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="88dp" app:srcCompat="@drawable/notification" android:id="@+id/explore_notification_button"
-            android:background="#00FFFFFF"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#673AB7"
+            app:srcCompat="@drawable/notification" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
