--- a/app/src/main/res/layout/recipe_items.xml
+++ b/app/src/main/res/layout/recipe_items.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingBottom="10dp">
 
     <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="355dp"
-        android:background="#FFFFFF"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:background="#2196F3"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/recipeName"
             android:layout_width="match_parent"
