--- a/app/src/main/res/layout/recipe_items.xml
+++ b/app/src/main/res/layout/recipe_items.xml
@@ -21,15 +21,21 @@
             android:layout_height="55dp"
             android:background="#D3F1F4"
             android:gravity="center"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
+            android:focusable="false"
             android:textSize="36sp" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/recipeImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:background="#2B2B2B"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
+            android:focusable="false"
             app:srcCompat="@drawable/chicken" />
 
         <TextView
@@ -39,6 +45,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginEnd="20dp"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
+            android:focusable="false"
             android:layout_marginRight="20dp"
             android:background="#D3F1F4"
                                          />
