--- a/app/src/main/res/layout/recipepage.xml
+++ b/app/src/main/res/layout/recipepage.xml
@@ -32,23 +32,23 @@
         <ImageView
             android:id="@+id/recipeImgPage"
             android:layout_width="match_parent"
-            android:layout_height="146dp"
+            android:layout_height="113dp"
             android:layout_marginBottom="15dp"
             app:srcCompat="@drawable/chicken" />
 
         <TextView
             android:id="@+id/recInstructPage"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="151dp"
             android:layout_margin="10dp"
             android:background="@color/white"
             android:text="Instructions:"
             android:textColor="#000000"
-            android:textSize="24sp" />
+            android:textSize="12sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
@@ -60,16 +60,16 @@
                 android:background="@color/white"
                 android:text="Ingredients:"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/instructionsPage"
+                android:id="@+id/recInfoPage"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:text="Information:"
                 android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textSize="12sp" />
 
         </LinearLayout>
 
