working categories and saving recipes

--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -16,8 +16,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/regularPurple"
-        android:clickable="true"
-        android:focusable="true"
+        android:focusableInTouchMode="false"
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/white"
