--- a/app/src/main/res/layout/recipepage.xml
+++ b/app/src/main/res/layout/recipepage.xml
@@ -55,7 +55,7 @@
         <TextView
             android:id="@+id/recInstructPage"
             android:layout_width="match_parent"
-            android:layout_height="151dp"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@color/white"
             android:text="Instructions:"
@@ -70,8 +70,8 @@
 
             <TextView
                 android:id="@+id/pageIngredients"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:text="Ingredients:"
@@ -81,7 +81,7 @@
             <TextView
                 android:id="@+id/recInfoPage"
                 android:layout_width="200dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:text="Information:"
                 android:textColor="#000000"
